--- a/MyLibraryFactory/app/src/main/res/layout/activity_test.xml
+++ b/MyLibraryFactory/app/src/main/res/layout/activity_test.xml
@@ -1,17 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_test"
+    android:id="@+id/menuRoot"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="jp.ac.u_tokyo.kyoyo.seo.mylibraryfactory.TestActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:background="#eeeeee"
+        android:padding="5dp"
+        android:layout_marginBottom="3dp">
+
+        <TextView
+            android:id="@+id/textViewLoginStatus"
+            android:text="NO LOGIN"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="4"/>
+
+        <TextView
+            android:id="@+id/textViewUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="User Name"
+            android:layout_weight="3"/>
+
+        <ImageView
+            android:id="@+id/imageViewUser"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_contact_picture_2"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/buttonRanking"
+                android:text="Ranking"
+                android:paddingLeft="20dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:textSize="18sp"
+                android:layout_marginBottom="3dp"
+                android:layout_height="80dp" />
+
+            <Button
+                android:id="@+id/buttonSearch"
+                android:text="Search"
+                android:paddingLeft="20dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:textSize="18sp"
+                android:layout_marginBottom="3dp"
+                android:layout_height="80dp" />
+
+            <Button
+                android:id="@+id/buttonMyList"
+                android:text="My List"
+                android:paddingLeft="20dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:textSize="18sp"
+                android:layout_marginBottom="3dp"
+                android:layout_height="80dp"/>
+
+            <Button
+                android:id="@+id/buttonTempMyList"
+                android:text="Temp My List"
+                android:paddingLeft="20dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:textSize="18sp"
+                android:layout_marginBottom="3dp"
+                android:layout_height="80dp"/>
+
+        </LinearLayout>
+
+
+
+    </ScrollView>
+
+</LinearLayout>
