--- a/MyLibraryFactory/app/src/main/res/layout/activity_test.xml
+++ b/MyLibraryFactory/app/src/main/res/layout/activity_test.xml
@@ -17,6 +17,7 @@
         <TextView
             android:id="@+id/textViewLoginStatus"
             android:text="NO LOGIN"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="4"/>
@@ -26,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="User Name"
+            android:gravity="center"
             android:layout_weight="3"/>
 
         <ImageView
