[update]コメント投稿
コメントを投稿する機能を追加

--- a/MyLibraryFactory/app/src/main/res/layout/dialog_details.xml
+++ b/MyLibraryFactory/app/src/main/res/layout/dialog_details.xml
@@ -262,6 +262,12 @@
                         android:layout_weight="3" />
                 </TableRow>
             </TableLayout>
+            <Button
+                android:id="@+id/buttonDetailsComment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Get Comment"
+                android:layout_gravity="center_horizontal"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
