[update]マイリスへの追加機能
マイリスに動画を追加する機能をデモに実装
マイリスを編集するMyListEditor内のＡＰＩに送信するパラメータを一部修正

--- a/MyLibraryFactory/app/src/main/res/layout/dialog_details.xml
+++ b/MyLibraryFactory/app/src/main/res/layout/dialog_details.xml
@@ -262,6 +262,13 @@
                         android:layout_weight="3" />
                 </TableRow>
             </TableLayout>
+            <LinearLayout
+                android:id="@+id/linearLayoutMyListDetailsContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
